# harp-demo

./: .gitmodules  Makefile  docker-compose.yml  harp.yaml  start  start.sh  tests.sh
badapi/: pyproject.toml
badapi/badapi/: default.py  settings.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  index.css
grafana/dashboards/: harp.json
grafana/provisioning/datasources/: datasource.yml
k8s/: Makefile  README  schema.dot
k8s/certs/: Makefile  demo.v3.ext
k8s/manifests/: api1.yaml  api2.yaml  api3.yaml  api4.yaml  index.yaml  pgadmin.yaml
k8s/static/index/: index.html
k8s/static/locust/: main.py
k8s/values/: grafana.yaml  harp.yaml  locust.yaml  prometheus.yaml
locust/: locustfile.py  pyproject.toml
locust/config/: locustfile.py
locust/config/common/: users.py
prometheus/: prometheus.yml
